Fixed bug with nav bar covering content.

--- a/src/SimpleSocial/Web/SimpleSocial.Web/wwwroot/css/my-profile.css
+++ b/src/SimpleSocial/Web/SimpleSocial.Web/wwwroot/css/my-profile.css
@@ -164,11 +164,12 @@ input[type="file"] {
 }
 
 .vertical-menu a {
+    display: flex;
+    align-items: center;
     margin: 2px auto;
-    width: 60%;
     color: black;
-    display: block;
     padding: 12px;
+    background: white;
     text-decoration: none;
 }
 
